--- a/huidou/package.json
+++ b/huidou/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
+    "axios": "^0.16.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^7.1.1",
     "babel-plugin-istanbul": "^4.1.1",
@@ -65,6 +66,7 @@
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
+    "vue-amap": "^0.2.9",
     "vue-awesome-swiper": "^2.5.4",
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
